fix: scrollbar style, layout edit

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -73,7 +73,22 @@ body,
     --ring: 0 0% 83.1%;
   }
 }
- 
+
+::-webkit-scrollbar {
+  width: 6px;
+  height: 6px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: darkgrey;
+  border-radius: 6px;
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+  border-radius: 6px;
+}
+
 @layer base {
   * {
     @apply border-border;
